Backport post fix compiler warnings and test failures for BUG#25192 BUG#12190